--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -76,7 +76,14 @@ $font-main-medium: 'Roboto Medium', sans-serif;
     font-family: $font-main-medium;
     font-size: 14px;
     line-height: 16px;
-		letter-spacing: 1px;
+	letter-spacing: 1px;
+}
+
+@mixin text-h4-bold() {
+    font-family: $font-main-bold;
+    font-size: 18px;
+	line-height: 28px;
+	letter-spacing: 0px;
 }
 
 @mixin text-p() {
