--- a/frontend/src/app/libs/landing/components/events-page/events-page.component.html
+++ b/frontend/src/app/libs/landing/components/events-page/events-page.component.html
@@ -1,12 +1,26 @@
-<ng-container *ngIf="events.status === successStatus">
-	<app-user-events-list
-		*ngIf="user?.value"
-		[user]="user.value"
-		[events]="events.value">
-	</app-user-events-list>
+<div class="app-landing-page">
+	<div class="app-landing-page__wrapper-img">
+		<div class="app-landing-page__wrapper-text">
+			<p class="app-landing-page__title">{{ "LANDING-PAGE.TITLE" | translate }}</p>
+			<p class="app-landing-page__paragraph">{{ "LANDING-PAGE.TEXT" | translate }}</p>
+			<app-button class="app-landing-page__btn"
+						type="flat"
+						[theme]="darkTheme"
+						(click)="goToSignUp()">
+				{{ "BUTTON.SIGN_UP" | translate }}</app-button>
+		</div>
+		<img class="app-landing-page__img"
+			 src="assets/images/welcome-bgninja-landing.svg"
+			 alt="ninja">
+	</div>
+	<ng-container *ngIf="events.status === successStatus">
+		<app-user-events-list *ngIf="user?.value"
+							  [user]="user.value"
+							  [events]="events.value">
+		</app-user-events-list>
 
-	<app-public-events-list
-		*ngIf="!user?.value && user.status !== pendingStatus"
-		[events]="events.value">
-	</app-public-events-list>
-</ng-container>
+		<app-public-events-list *ngIf="!user?.value && user.status !== pendingStatus"
+								[events]="events.value">
+		</app-public-events-list>
+	</ng-container>
+</div>
