feat: added localization

--- a/frontend/src/app/libs/landing/components/events-page/events-page.component.html
+++ b/frontend/src/app/libs/landing/components/events-page/events-page.component.html
@@ -1,13 +1,13 @@
 <div class="app-landing-page">
 	<div class="app-landing-page__wrapper-img">
 		<div class="app-landing-page__wrapper-text">
-			<p class="app-landing-page__title"><!-- {{ "LANDING-PAGE.TITLE" | translate }} --></p>
-			<p class="app-landing-page__paragraph"><!-- {{ "LANDING-PAGE.TEXT" | translate }} --></p>
+			<p class="app-landing-page__title"> {{ "LANDING-PAGE.TITLE" | translate }} </p>
+			<p class="app-landing-page__paragraph"> {{ "LANDING-PAGE.TEXT" | translate }} </p>
 			<app-button class="app-landing-page__btn"
 						type="flat"
 						[theme]="darkTheme"
 						(click)="goToSignUp()">
-				<!-- {{ "BUTTON.SIGN_UP" | translate }} --></app-button>
+				 {{ "BUTTON.SIGN_UP" | translate }} </app-button>
 		</div>
 		<img class="app-landing-page__img"
 			 src="assets/images/welcome-bgninja-landing.svg"
