feat: added breadcrumb, store for breadcrumb

--- a/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
+++ b/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
@@ -1,7 +1,7 @@
 <div class="app-event-description-panel">
-	<div class="app-event-description-panel__breadcrumb">
-		<app-breadcrumb [event]="event"></app-breadcrumb>
-	</div>
+ 	<div class="app-event-description-panel__breadcrumb">
+		<app-breadcrumb></app-breadcrumb>
+	</div> 
 	<div class="app-event-description-panel__container {{event?.color}}">
 		<div class="app-event-description-panel__box-left">
 			<div class="app-event-description-panel__title">
