--- a/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
@@ -1,3 +1,7 @@
+<div class="app-user-config">
+<div class="app-user-config__breadcrumb">
+	<app-breadcrumb></app-breadcrumb>
+</div> 
 <form [formGroup]="profileForm">
     <div>
         <mat-form-field appearance="fill">
@@ -43,3 +47,4 @@
         </div>
     </div>
 </form>
+</div>
