feat: changed width of input

--- a/frontend/src/app/libs/common-components/components/input/input.component.html
+++ b/frontend/src/app/libs/common-components/components/input/input.component.html
@@ -1,6 +1,6 @@
 <mat-form-field
 	appearance="outline"
-	class="input"
+	class="input input-width-{{size}}"
 	[class.input--dark]="isDarkTheme">
 
 	<mat-icon matPrefix *ngIf="preIcon" class="input__pre-icon">{{preIcon}}</mat-icon>
