--- a/frontend/src/app/libs/common-components/components/input/input.theme.scss
+++ b/frontend/src/app/libs/common-components/components/input/input.theme.scss
@@ -18,6 +18,10 @@
 	padding: .7rem 0;
 }
 
+.input-width-full {
+	width: 432px;
+}
+
 .mat-form-field-appearance-outline.input--dark .mat-form-field-outline {
 	color: $color-white-30;
 }
