feat: added icons and new forms

--- a/frontend/src/app/libs/common-components/components/input/input.theme.scss
+++ b/frontend/src/app/libs/common-components/components/input/input.theme.scss
@@ -22,6 +22,9 @@
 	width: 432px;
 }
 
+.input-width-medium {
+	width: 388px;
+}
 .mat-form-field-appearance-outline.input--dark .mat-form-field-outline {
 	color: $color-white-30;
 }
